--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "typescript": "^5.4.2"
   },
   "scripts": {
-    "build": "tsc -b"
+    "build": "tsc -b",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
